MLG Testsite mit CSS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Meine Testseite</title>
+    <title>MLG Pro Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Hallo Welt!</h1>
-<p>Dies ist meine erste Webseite.</p>
+<h1>💯 MLG PRO 💯</h1>
+
+<img src="https://media.tenor.com/tDu1nb8ljOoAAAAC/mlg-doge.gif" alt="MLG Doge">
+
+<p>Get <strong>rekt</strong>, m8!</p>
+
+<div class="effects">
+    <img src="https://media.tenor.com/I-pqP05FZLAAAAAC/mlg-noscope.gif" alt="NoScope">
+    <img src="https://media.tenor.com/VDkpGMxRb0sAAAAC/thug-life-deal-with-it.gif" alt="Thug Life">
+    <img src="https://media.tenor.com/7rZYcTO5pysAAAAC/mlg-snoop-dogg.gif" alt="Snoop Dogg">
+</div>
+
+<audio autoplay loop>
+    <source src="https://archive.org/download/MLGSoundboard/MLG%20Airhorn.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+<footer>
+    <p>© 2025 MLG Gang</p>
+</footer>
 </body>
 </html>
