--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>💯 MLG PRO 💯</h1>
+<h1> xXx_MLG_420_xXx  </h1>
 
-<img src="https://media.tenor.com/tDu1nb8ljOoAAAAC/mlg-doge.gif" alt="MLG Doge">
+<img src="https://media1.tenor.com/m/LnN1WqEy1rcAAAAC/wefw-mlg.gif" alt="MLG Doge">
 
 <p>Get <strong>rekt</strong>, m8!</p>
 
 <div class="effects">
-    <img src="https://media.tenor.com/I-pqP05FZLAAAAAC/mlg-noscope.gif" alt="NoScope">
-    <img src="https://media.tenor.com/VDkpGMxRb0sAAAAC/thug-life-deal-with-it.gif" alt="Thug Life">
-    <img src="https://media.tenor.com/7rZYcTO5pysAAAAC/mlg-snoop-dogg.gif" alt="Snoop Dogg">
+    <img src="https://media1.tenor.com/m/F63oBAgOgGAAAAAd/daaninator-daaninator-mlg.gif" alt="swag">
+    <img src="Download.jpg" alt="bucket">
+    <img src="https://media1.tenor.com/m/X6z6u6th6SgAAAAC/rekt-bruh.gif" alt="reckt">
 </div>
 
 <audio autoplay loop>
